--- a/_posts/2017-10-09-lao-zu-si.md
+++ b/_posts/2017-10-09-lao-zu-si.md
@@ -4,8 +4,8 @@ title: "国庆节黄梅老祖寺之旅"
 categories: "kong-fu"
 ---
 # 国庆节黄梅老祖寺之旅
-![alt text](/images/laozisi.jpg "老祖寺合影")
-<div align="center"><img src="/images/laozisi.jpg" width="" height="" alt=""></div>
+![alt text](/images/laozusi.jpg "老祖寺合影")
+<div align="center"><img src="/images/laozusi.jpg" width="" height="" alt=""></div>
 ### 1.诗
 
 久有凌云志，喜上紫云山。
