--- a/_posts/2017-10-09-lao-zu-si.md
+++ b/_posts/2017-10-09-lao-zu-si.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "国庆节黄梅老祖寺之旅"
-categories: "kong-fu"
+categories: "life"
 ---
 # 国庆节黄梅老祖寺之旅
 <div align="center"><img src="/images/laozusi.jpg" width="" height="" alt=""></div>
