--- a/_posts/life/2017-11-07-dongzhi.md
+++ b/_posts/life/2017-11-07-dongzhi.md
@@ -1,6 +1,13 @@
 ---
 layout: post
-title: "冬至"
+title: "立冬"
 categories: "life"
 permalink: /:title.html
 ---
+
+&emsp&emsp早上练拳有点感觉不得劲儿，回来的路上才想起今天立冬了。夏天的阳光、热烈、奔放、挥汗如雨非常值得怀恋，但大自然的伟力不可违抗，冬天也挺美好，至乐性愉，至静性廉。
+似乎要做好窝冬的准备，为来春积蓄能量？
+&emsp&esmp先品味一下喜欢的文字，做好心理准备。
+	“冬三月，此谓闭藏，水冰地坼，无扰乎阳，早卧晚起，必待日光，使志若伏若匿，若有私意，若已有得，去寒就温，无泄皮肤，使气亟夺，此冬气之应，养藏之道也。”————《黄帝内经·四气调神大论》
+
+	“”
