--- a/_posts/life/2017-11-07-dongzhi.md
+++ b/_posts/life/2017-11-07-dongzhi.md
@@ -5,9 +5,21 @@ categories: "life"
 permalink: /:title.html
 ---
 
-&emsp&emsp早上练拳有点感觉不得劲儿，回来的路上才想起今天立冬了。夏天的阳光、热烈、奔放、挥汗如雨非常值得怀恋，但大自然的伟力不可违抗，冬天也挺美好，至乐性愉，至静性廉。
+&emsp;&emsp;早上练拳有点感觉不得劲儿，回来的路上才想起今天立冬了。夏天的阳光、热烈、奔放、挥汗如雨非常值得怀恋，但大自然的伟力不可违抗，冬天也挺美好，至乐性愉，至静性廉。
 似乎要做好窝冬的准备，为来春积蓄能量？
-&emsp&esmp先品味一下喜欢的文字，做好心理准备。
+&emsp;&esmp;先品味一下喜欢的文字，做好心理准备。
 	“冬三月，此谓闭藏，水冰地坼，无扰乎阳，早卧晚起，必待日光，使志若伏若匿，若有私意，若已有得，去寒就温，无泄皮肤，使气亟夺，此冬气之应，养藏之道也。”————《黄帝内经·四气调神大论》
 
-	“”
+	“性有巧拙，可以伏藏”————《阴符经》
+
+	"致虚极，守静笃。"————《道德经》
+
+&emsp;&emsp;至道之精，窈窈冥冥；至道之极，昏昏默默。无视无听，抱神以静，形将自正。
+
+&emsp;&emsp;必静必清，无劳女形，无摇女精，乃可以长生。目无所见，耳无所闻，心无所知，女神将守形，形乃长生。
+
+&emsp;&emsp;慎女内，闭女外，多知为败。我为女遂于大明之上矣，至彼至阳之原也；为女入于窈冥之门矣，至彼至阴之原也。
+
+&emsp;&emsp;天地有官，阴阳有藏。慎守女身，物将自壮。我守其一以处其和。
+
+&emsp;&emsp;————《庄子·在宥》
