--- a/_posts/kongfu/2017-11-09-kongfu-dao-1.md
+++ b/_posts/kongfu/2017-11-09-kongfu-dao-1.md
@@ -6,7 +6,7 @@ permalink: /:title.html
 ---
 	“功夫是一种心灵与技巧相配合的精妙艺术，它必须顺其自然，像花朵一样，摆脱情绪与欲望羁绊，从心灵中绽放出来。”——李小龙
 
-道——功夫原理的核心
+<center>道——功夫原理的核心</center>
 
 &emsp;&emsp;功夫原理的核心就是道，也就是宇宙的自发性。道孕育阴阳，阴阳原理在武术中运用体现为“和谐法则”。比如习练太极拳时的要求，外三合：肩与胯合、肘与膝合、手与足合；内三合：筋与骨合、心与意合、气与力合。自身和谐的同时，还要与对手保持和谐，对于对手的力量不要顽抗，而要顺势而为。忘记自己并将自己的力量融入对手发势、变势的动作中，后发制人，借力打力来击败对手，以柔克刚。
 &emsp;&emsp;关于以柔克刚，柔弱的力量，老子又这样描述：
@@ -14,7 +14,7 @@ permalink: /:title.html
 	“人之生也柔弱，其死也坚强。草木之生柔脆，其死也枯槁。故坚强者死之徒，柔弱者生之徒。是以兵强则灭，木强则折，强大处下，柔弱处上。”
 	“天下莫柔弱于水，而攻坚强者莫之能胜，以其无以易之。”——《道德经》
 
-无心
+<center>无心</center>
 
 &emsp;&emsp;要想更好地演练功夫中的每招每招，就必须放松动作，在放松形体之前，应首先使意念和精神放松下来。习武之人必须保持一种静谧与平和的心态，即“无心”原则。无心并不意味着大脑一片空白，而是指摒弃了所有的情感。
 
