--- a/_drafts/2017-11-09-kongfu-dao-2.md
+++ b/_drafts/2017-11-09-kongfu-dao-2.md
@@ -1,6 +1,8 @@
 ---
 layout: post
-title: "功夫之道"
+title: "功夫之道2"
 categories: "kongfu"
 permalink: /:title.html
 ---
+&emsp;&emsp;自然现象中最无为的就是水。
+adfadf
