--- a/_posts/kongfu/2017-11-09-kongfu-dao-1.md
+++ b/_posts/kongfu/2017-11-09-kongfu-dao-1.md
@@ -25,3 +25,7 @@ permalink: /:title.html
 &emsp;&emsp;每一个冲突焦点，每一种外在的情感都既有破坏性，有分散精力。它打乱人自然节奏，降低人整体效率，它比体力损耗更让人精疲力尽。比如：仇恨、嫉妒、欲望、自傲、虚妄、贪婪、恐惧。
 
 &emsp;&emsp;无心的原则是思想的无欲无求，习武人能让自己的意识成为一面镜子，它一无所有但又包罗万象，它接纳万物但又一无保留。无心并不是没有情感和感觉，而是感觉没有阻滞的状态。在功夫中，注意力集中，并非是指通常的集中全部精力在唯一的目标上，而是对周身与外界保持一种静态的警觉。
+
+<center>无为</center>
+
+&emsp;&emsp;无为并不是什么都不做，而是明心见性，要让自己的思想自由流动，完全不受任何内在或外在的干扰。
