--- a/_posts/kongfu/2017-11-09-kongfu-dao-1.md
+++ b/_posts/kongfu/2017-11-09-kongfu-dao-1.md
@@ -14,7 +14,8 @@ permalink: /:title.html
 
 	"反者道之动，弱者道之用。"
 
-	“人之生也柔弱，其死也坚强。草木之生柔脆，其死也枯槁。故坚强者死之徒，柔弱者生之徒。是以兵强则灭，木强则折，强大处下，柔弱处上。”
+	“人之生也柔弱，其死也坚强。草木之生柔脆，其死也枯槁。故坚强者死之徒，
+	柔弱者生之徒。是以兵强则灭，木强则折，强大处下，柔弱处上。”
 
 	“天下莫柔弱于水，而攻坚强者莫之能胜，以其无以易之。”——《道德经》
 
@@ -28,4 +29,14 @@ permalink: /:title.html
 
 <center>无为</center>
 
-&emsp;&emsp;无为并不是什么都不做，而是明心见性，要让自己的思想自由流动，完全不受任何内在或外在的干扰。
+&emsp;&emsp;无为并不是什么都不做，而是明心见性，要让自己的思想自由流动，完全不受任何内在或外在的干扰。功夫里的无为意味着自然而然的动作，在格斗中，功夫高手都忘记自己的存在，而随着对手的动作而动。他放弃了所有的自我反抗意念，而采取柔顺的态度。他将意念放松，使动作解除了包袱。而一旦意随念生，动作也会随之启动，立即展开对敌人的攻击。但是一旦停下来思考，他的动作就会受到阻碍。
+
+&emsp;&emsp;通过无为，达到一种泰然处之的境界，使习武之人从奋斗和竭力而为中解放出来，凡事都要发乎自然，绝不可刻意或竭力而为。自然现象中最无为的就是水。水是如此纤细，以至于没法捧住一把；打它，它不会疼痛；戳它，它不会受伤；割它，它也不会分开。它自己无形，它的形状是由盛载它的容器决定的。受热可以变成蒸汽，冰冻起来能结成巨大冰山。一会儿像瀑布一样汹涌澎湃，一会儿像湖一样的宁静。它时而像湍急可怕的激流，时而像炎热夏日里的泉水一样，令人心旷神怡，如饮甘醴。
+
+&emsp;&emsp;这个世界上，人们熙来攘往，不少人希望出人头地或造出点声势来。他们想力争上游，出类拔萃。这种抱负对于习武之人来讲并不适用，习武之人应抛弃所有的自以为是，争强斗胜的心理。一名优秀的习武者，根本不应有骄傲自满的情绪。
+
+&emsp;&emsp;习武的目标在于自我教化，“内在的自我”才是一个人真正的自我。为了实现真实的自我，习武者并不依凭他人的观点而生活，真正的追求在于不断地充实自我，快乐之源不依赖他人的外在评价。通过不断地磨炼，在精神上最大程度地放松自我，进入更加自由的天地。
+
+&emsp;&emsp;“圣人之静也，非曰静也善，故静也；万物无足以铙心者，故静也。水静则明烛须眉，平中准，大匠取法焉。水静犹明，而况精神！圣人之心静乎！天地之鉴也；万物之镜也。夫虚静恬淡寂漠无为者，天地之平而道德之至，故帝王圣人休焉。休则虚，虚则实，实则伦矣。虚则静，静则动，动则得矣。静则无为，无为也则任事者责矣。无为则俞俞，俞俞者忧患不能处，年寿长矣。夫虚静恬淡寂漠无为者，万物之本也。”——《庄子·天道》
+
+&emsp;&emsp;在己无居，形物自著。其动若水，其静若镜，其应若响。故其道若物者也。**物自违道，道不违物。**——《列子·仲尼》
