--- a/_drafts/2017-12-09-陈式太极拳对身体各部位的要求（五）上肢.md
+++ b/_drafts/2017-12-09-陈式太极拳对身体各部位的要求（五）上肢.md
@@ -19,4 +19,4 @@ permalink: /:title.html
 拳：要求四指卷屈，拇指扣其上面，不要太用力，但触物时要握紧。
 勾手：五指自然捉拢，不可用力，腕微屈。手与肩肘，同足、膝、髋要求一样，都须完整一致。运动时如果手引伸过度，容易把臂拉直，失去了松肩沉肘的要领。而过分的沉肘，忽略了手的引伸，则易造成臂部过于弯曲的毛病。练习时在不破坏松肩沉肘的原则下，宜使臂部保持一定的弧度，手尽量舒展引伸，做到动作圆满顺随，轻而不浮、沉而不僵，灵活自然。
 
-在手的动作要领上，拳论中还有“首领神随，身端步稳”之说。太极拳注意意识引导动作，这是一个特点。武术中不论什么拳套，都包含技击的方法。应用时因敌变化，避实击虚，整打零用。实际应用不是依照套路的形势出现，而是通过这种方法提高身体素质，
+在手的动作要领上，拳论中还有“首领神随，身端步稳”之说。太极拳注意意识引导动作，这是一个特点。武术中不论什么拳套，都包含技击的方法。应用时因敌变化，避实击虚，整打零用。实际应用不是依照套路的形势出现，而是通过这种方法提高身体素质，使身手，内外各个部位，在各个角度都能适应客观条件的变化，熟练技击方法。
