--- a/_drafts/2017-12-13-练功的基本方法（三）缠丝劲的基本训练.md
+++ b/_drafts/2017-12-13-练功的基本方法（三）缠丝劲的基本训练.md
@@ -7,15 +7,18 @@ permalink: /:title.html
 练功的基本方法
 
 （三）缠丝功的基本训练
-（1）正面缠丝
 
-动作：1、身体中正站立（同预备式），右脚向右开步，约80厘米。右手抬起与亥前，手心朝外，指尖向左；左手叉腰，拇指在后，四只在左腹前。身体略蹲，重心偏右，身体保持中正，裆要开圆。
+（2）侧面缠丝
 
-2、重心由右向左移，随重心左移，身体左转约30度，右手由上向左、向下划弧半圈。
-3、重心由左腿移向右腿，随重心右移身体向右转30度，右臂内旋向左、向右上方划弧。两手可交替练习。
+动作：
+1、身法要求同正面缠丝，只是身体略向右后转，右手略向右后转，手心斜向外，重心偏右腿
+2、右手向后、向下划半圈，身体向右后微转，重心移向左腿。
+3、右手向前、向上划弧、重心从左腿移向右腿
+要领：右手向后、向下划弧，为顺缠，同时重心偏左。向前、向上屈肘转臂划弧，为逆缠，重心移向右腿。
 
-要领：1、从原势开始，重心由右腿移于左腿，又由左腿移向右腿；右手在体前划圈一周。右手以小指领劲（小指在前）由外向里转为顺缠丝；由以小指领劲的顺缠丝转化为拇指领劲的缠丝，却是由里向外划弧半圈，动作称为逆缠丝。
+（3）穿掌缠丝
 
-2、身体向右转时，要将右肩松开，一般易用僵劲。
-3、在身体和顺逆缠丝变化时，要保持身体中正和圆裆松胯。身体向左转时，左髋略向下沉；向右转时右髋亦要向下沉。
-4、顺逆缠丝的变化，不光是手心内外的翻转，而是下肢的虚实变换和上肢运劲的方向、角度转换在手上的表现。开始练习缠丝劲时，要注意身法自然协调地配合手法。协调一致，则内气畅通。逆缠时有内气向外催的感觉；顺缠时有气归丹田，内气回收感觉。如果只顾手上的缠丝变化，不与整个身体协调配合，就失掉了缠丝劲的锻炼价值。其他各种缠丝劲都一样。
+动作：
+1、右手置于右髋前，手心朝上，指尖向左，重心略偏左腿。
+2、重心移向右腿，右手从右腹前向上经左肩前划弧至脸前。
+3、右手从上向外、向下划弧半圈，重心右右腿移于左腿。
