--- a/_posts/life/2017-12-16-si-gu-ren.md
+++ b/_posts/life/2017-12-16-si-gu-ren.md
@@ -5,9 +5,9 @@ categories: "life"
 permalink: /:title.html
 ---
 
-<center>思故人感怀</center>
+思故人感怀
 
 &emsp;&emsp;明月浩浩，独步于地大北门广场，思故人有感
 
-<center>明月印天心，茕茕我武影。</center>
-<center>蓦然回首处，亦真亦幻情。</center>
+明月印天心，茕茕我武影。
+蓦然回首处，亦真亦幻情。
