--- a/_posts/culture/2018-06-18-修行就是爱上你自己.md
+++ b/_posts/culture/2018-06-18-修行就是爱上你自己.md
@@ -29,7 +29,7 @@ permalink: /:title.html
 
 &emsp;&emsp;一旦你真心爱上自己，实际上也只有你真心爱上自己，你才真正体会了神性，你才真正领略了神在你的心中，你才真正明白上帝与你同在的含义。
 
-&emsp;&emsp;当下即是佛，你当下即是佛，众生本来就是佛。佛在你心中，如果你还不接纳，不喜欢，哪怕不是百分百喜欢你自己，那么，你如何修行，都不靠谱。因为，你还不相信这个生命，等于你不相信上帝的作品，等于你不相信上帝与你同在。你会明白，上帝即是你，佛即是你，一切的外部世界都是你。你切都是我们的心。就像《心之力》中：“宇宙即我心，我心即宇宙”。
+&emsp;&emsp;<strong>当下即是佛，你当下即是佛，众生本来就是佛。佛在你心中，如果你还不接纳，不喜欢，哪怕不是百分百喜欢你自己，那么，你如何修行，都不靠谱。</strong>因为，你还不相信这个生命，等于你不相信上帝的作品，等于你不相信上帝与你同在。你会明白，上帝即是你，佛即是你，一切的外部世界都是你。<strong>你切都是我们的心。就像《心之力》中：“宇宙即我心，我心即宇宙”。</strong>
 
 &emsp;&emsp;当你彻底爱上你自己的时候，就是你爱上神的时候，就是你爱上上帝的时候。那是合一的。
 
@@ -43,30 +43,30 @@ permalink: /:title.html
 
 &emsp;&emsp;当我们说投资你自己的时候，并不是指对你进行改造，不是。而是把你曾经被人刻意改造的部分全部清除。投资的意思，是指让你能够全然地活出生命本来的面貌。那是纯然的、智慧的、灵敏的、无所不能的!
 
-&emsp;&emsp;开悟的《楞严经》里面就是告诉我们，什么才是真正的我们自己。
+&emsp;&emsp;<strong>开悟的《楞严经》就是告诉我们，什么才是真正的我们自己。</strong>
 
-&emsp;&emsp;只有你爱上自己，才会自觉地滋养、培育、呵护你这个独特的生命。
+<strong>&emsp;&emsp;只有你爱上自己，才会自觉地滋养、培育、呵护你这个独特的生命。
 
-&emsp;&emsp;才会自动摒弃一切的烦恼、压力、负担，才会自动远离伤害。
+<strong>&emsp;&emsp;才会自动摒弃一切的烦恼、压力、负担，才会自动远离伤害。
 
-&emsp;&emsp;只有你爱上你自己，才会听到内心真实的呼唤。才顺着神的旨意，开启你独特的旅程，展现你的光。
+<strong>&emsp;&emsp;只有你爱上你自己，才会听到内心真实的呼唤。才顺着神的旨意，开启你独特的旅程，展现你的光。
 
-&emsp;&emsp;这不是自私，相反的，这是真正的慈悲。
+<strong>&emsp;&emsp;这不是自私，相反的，这是真正的慈悲。
 
-&emsp;&emsp;真正的慈悲，是指你将美好的自己，美好的这个生命，绽放出来。而不是将枯萎的你牺牲出去。
+<strong>&emsp;&emsp;真正的慈悲，是指你将美好的自己，美好的这个生命，绽放出来。而不是将枯萎的你牺牲出去。
 
-&emsp;&emsp;当你对自己没有任何的挑剔，没有任何的担忧，没有任何的恐惧，全然自信，全然充满勇气的时候。就表示你与神同在，与上帝同在。
+<strong>&emsp;&emsp;当你对自己没有任何的挑剔，没有任何的担忧，没有任何的恐惧，全然自信，全然充满勇气的时候。就表示你与神同在，与上帝同在。
 
-&emsp;&emsp;你不但完美，而且唯一，独特而无人可比。
+<strong>&emsp;&emsp;你不但完美，而且唯一，独特而无人可比。
 
-&emsp;&emsp;唯一的问题是，你不相信这一点，唯一的问题是，你满怀疑惑。
+<strong>&emsp;&emsp;唯一的问题是，你不相信这一点，唯一的问题是，你满怀疑惑。
 
-&emsp;&emsp;当你怀疑自己的时候，你也同时怀疑别人，于是你的生命，就陷入这些事端。
+<strong>&emsp;&emsp;当你怀疑自己的时候，你也同时怀疑别人，于是你的生命，就陷入这些事端。
 
-&emsp;&emsp;所以当佛在妙法莲华经里面告诉你，你当下就是佛的时候，你不相信。
+<strong>&emsp;&emsp;所以当佛在《妙法莲华经》里面告诉你，你当下就是佛的时候，你不相信。
 
-&emsp;&emsp;你疑惑，我就是个凡夫，怎么就是佛了呢。
+<strong>&emsp;&emsp;你疑惑，我就是个凡夫，怎么就是佛了呢。
 
 &emsp;&emsp;所以这就让你永远处在分别、执着、妄想当中。而不能证得自己本来就是佛。
 
-&emsp;&emsp;顶礼妙法莲华经，顶礼大佛顶首楞严经，
+<strong>&emsp;&emsp;顶礼《妙法莲华经》，顶礼《大佛顶首楞严经》。
